--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,12 @@ crm-frontend/public/robots.txt
 crm-frontend/src/logo.svg
 crm-frontend/src/reportWebVitals.js
 crm-frontend/src/setupTests.js
+crm/garageApp/__pycache__/apps.cpython-39.pyc
+crm/garageApp/__pycache__/models.cpython-39.pyc
+crm/garageApp/migrations/__pycache__/__init__.cpython-39.pyc
+crm/garageApp/migrations/__pycache__/0001_initial.cpython-39.pyc
+crm/garageApp/migrations/__pycache__/0002_alter_vehicle_number_plate.cpython-39.pyc
+crm/garageApp/migrations/__pycache__/0003_auto_20220123_1227.cpython-39.pyc
+crm/garageApp/migrations/__pycache__/0004_auto_20220123_1230.cpython-39.pyc
+crm/garageApp/__pycache__/admin.cpython-39.pyc
+crm/garageApp/__pycache__/__init__.cpython-39.pyc
