--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,15 @@ crm/garageApp/migrations/__pycache__/0003_auto_20220123_1227.cpython-39.pyc
 crm/garageApp/migrations/__pycache__/0004_auto_20220123_1230.cpython-39.pyc
 crm/garageApp/__pycache__/admin.cpython-39.pyc
 crm/garageApp/__pycache__/__init__.cpython-39.pyc
+crm/garage/migrations/__pycache__/__init__.cpython-39.pyc
+crm/garage/migrations/__pycache__/0001_initial.cpython-39.pyc
+crm/garage/migrations/__pycache__/0002_service.cpython-39.pyc
+crm/garage/migrations/__pycache__/0002_vehicle.cpython-39.pyc
+crm/garage/migrations/__pycache__/0003_alter_vehicle_chassis_no_alter_vehicle_engine_no.cpython-39.pyc
+crm/garage/migrations/__pycache__/0003_subservice.cpython-39.pyc
+crm/garage/migrations/__pycache__/0004_billing.cpython-39.pyc
+crm/garage/migrations/__pycache__/0004_delete_vehicle.cpython-39.pyc
+crm/garage/__pycache__/__init__.cpython-39.pyc
+crm/garage/__pycache__/admin.cpython-39.pyc
+crm/garage/__pycache__/apps.cpython-39.pyc
+crm/garage/__pycache__/models.cpython-39.pyc
